force-app/main/default/objects/PBS_AAAP_Offer_Attachments__c/PBS_AAAP_Offer_Attachments__c.object-meta.xml
<CustomObject>
    <label>Offer Attachments</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Offer Attachments Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offer Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>