force-app/main/default/objects/PBS_AAAP_Offer_Attachments__c/fields/Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From__c</fullName>
    <label>Cloned From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>