force-app/main/default/objects/PBS_AAAP_Offer_Attachments__c/fields/Document_Description__c.field-meta.xml
<CustomField>
    <fullName>Document_Description__c</fullName>
    <label>Document Description</label>
    <length>60</length>
    <type>Text</type>
</CustomField>