force-app/main/default/objects/PBS_AAAP_Offer_Attachments__c/fields/PBS_AAAP_Attachment_Type__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Attachment_Type__c</fullName>
    <label>Attachment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Architectural Modernization Plans</fullName>
            </value>
            <value>
                <fullName>Asbestos Management Plans</fullName>
            </value>
            <value>
                <fullName>Authorization to Represent Ownership Entity</fullName>
            </value>
            <value>
                <fullName>Brokerage Commission Agreement (if applicable)</fullName>
            </value>
            <value>
                <fullName>Building Amenities Detail - Existing or Planned</fullName>
            </value>
            <value>
                <fullName>Certificate of Occupancy - Building</fullName>
            </value>
            <value>
                <fullName>Conditional Commitment of Funds</fullName>
            </value>
            <value>
                <fullName>Confirmation of Rent</fullName>
            </value>
            <value>
                <fullName>Conflict of Interest Disclosure</fullName>
            </value>
            <value>
                <fullName>Energy Star or Other Efficiency Improvements Supporting Documentation</fullName>
            </value>
            <value>
                <fullName>Energy Star or Other Energy Efficiency Improvements Supporting Documentation</fullName>
            </value>
            <value>
                <fullName>Fire / Life Safety Supporting Documentation</fullName>
            </value>
            <value>
                <fullName>Fire Life Safety Evaluation</fullName>
            </value>
            <value>
                <fullName>Fire Life Safety Evaluation - Form 12000</fullName>
            </value>
            <value>
                <fullName>Floor Plan</fullName>
            </value>
            <value>
                <fullName>Foreign Ownership / Foreign Financing Representation</fullName>
            </value>
            <value>
                <fullName>Form 3517B - General Clauses</fullName>
            </value>
            <value>
                <fullName>Historic Property / Historic District Supporting Documentation</fullName>
            </value>
            <value>
                <fullName>LEED or Green Globes Supporting Documentation</fullName>
            </value>
            <value>
                <fullName>Legal Description of Property</fullName>
            </value>
            <value>
                <fullName>National Environmental Policy Act Documentation</fullName>
            </value>
            <value>
                <fullName>National Historic Preservation Act Documentation</fullName>
            </value>
            <value>
                <fullName>Lessors Annual Cost Statement (Form 1217)</fullName>
            </value>
            <value>
                <fullName>Lessors Annual Cost Statement (Form 1217 attachment)</fullName>
            </value>
            <value>
                <fullName>Offeror GSA Form 1364</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Parking Plan</fullName>
            </value>
            <value>
                <fullName>Proof of Local Zoning Compliance</fullName>
            </value>
            <value>
                <fullName>Proof of Ownership</fullName>
            </value>
            <value>
                <fullName>Proof of Property Ownership or Control</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>