force-app/main/default/objects/PBS_AAAP_Offer_Attachments__c/fields/PBS_AAAP_Date_sent_to_GREX__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Date_sent_to_GREX__c</fullName>
    <label>Date sent to GREX</label>
    <type>DateTime</type>
</CustomField>