force-app/main/default/objects/PBS_AAAP_Offer_Attachments__c/fields/PBS_AAAP_Legacy_Offer_Att_ID__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Legacy_Offer_Att_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Offer Att ID</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>