force-app/main/default/objects/PBS_AAAP_Offer_Attachments__c/fields/PBS_AAAP_Offer__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Offer__c</fullName>
    <label>Offer</label>
    <referenceTo>PBS_AAAP_Offer__c</referenceTo>
    <relationshipLabel>Offer Attachments</relationshipLabel>
    <relationshipName>Offer_Attachments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>