force-app/main/default/objects/PBS_AAAP_Offer_Attachments__c/fields/PBS_AAAP_Sent_to_GREX__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Sent_to_GREX__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent to GREX</label>
    <type>Checkbox</type>
</CustomField>