force-app/main/default/objects/PBS_AAAP_Offer_Attachments__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <formula>TEXT(PBS_AAAP_Date_sent_to_GREX__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submitted Date</label>
    <type>Text</type>
</CustomField>